# models/token.go
@@ -22,3 +22,10 @@ type GenTokenRequest struct {
 	MaxDownloads *int64     `json:"max_downloads"`
 	AllowedCIDR  string     `json:"allowed_cidr"`
 }
+
+type GenUploadTokenRequest struct {
+	ValidFrom    *time.Time `json:"valid_from"`
+	ValidTo      *time.Time `json:"valid_to"`
+	MaxUploads   *int       `json:"max_uploads"`
+	AllowedCIDR  string     `json:"allowed_cidr"`
+}
